k8s/manifests/subscriptions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions
  namespace: sns
  labels:
    app: subscriptions
spec:
  selector:
    matchLabels:
      app: subscriptions
  replicas: 1
  template:
    metadata:
      labels:
        app: subscriptions
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: subscriptions
        image: sns-subscriptions:latest
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - containerPort: 3001
        imagePullPolicy: "Never"
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /probes/liveness
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /probes/readiness
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 30
        volumeMounts:
        - name: subscriptions-config
          mountPath: "/opt/sns/config"
      serviceAccountName: sns-sa
      volumes:
      - name: subscriptions-config
        configMap:
          name: subscriptions-config

---
apiVersion: v1
kind: Service
metadata:
  name: subscriptions
  namespace: sns
  labels:
    app: subscriptions
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: subscriptions
